--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "morgan": "^1.10.0",
     "pg": "^8.4.1",
     "pg-hstore": "^2.3.3",
+    "react-bootstrap": "^1.4.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^5.22.3",
     "sqlite3": "^4.2.0"
   },
